crates/red_knot_python_semantic/resources/mdtest/snapshots/instances.md_-_Binary_operations_on_instances_-_Operations_involving_types_that_can't_be_converted_to_a_`bool`.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: instances.md - Binary operations on instances - Operations involving types that can't be converted to a `bool`
mdtest path: crates/red_knot_python_semantic/resources/mdtest/binary/instances.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__ = 3
3 | 
4 | a = NotBoolable()
5 | 
6 | # error: [not-boolable] "Object of type `NotBoolable` can not be converted to a bool."
7 | 10 and a and True
```

# Diagnostics

```
error: lint:not-boolable
 --> /src/mdtest_snippet.py:7:8
  |
6 | # error: [not-boolable] "Object of type `NotBoolable` can not be converted to a bool."
7 | 10 and a and True
  |        ^ Object of type `NotBoolable` can not be converted to a bool.
  |

```
